# aiogram-contrib

./: .pre-commit.config.yaml  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: pypi-release.yml
src/aiogram/contrib/: const.py
src/aiogram/contrib/middlewares/: __init__.py  retry_request.py
src/aiogram/contrib/paginator/: __init__.py  callback_data.py  factory.py  paginator.py  types.py  utils.py
